house-list page
created house-list page

--- a/src/app/house-list/house-list.component.html
+++ b/src/app/house-list/house-list.component.html
@@ -1,1 +1,37 @@
-<p>{{houseList | json}}</p>
+<mat-form-field>
+  <mat-label>Filter</mat-label>
+  <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Algood or Westerlands" #input>
+</mat-form-field>
+
+<div class="mat-elevation-z8">
+  <table mat-table [dataSource]="dataSource" matSort>
+
+    <!-- Name Column -->
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> The name of the house </th>
+      <td mat-cell *matCellDef="let row"> {{row.name}} </td>
+    </ng-container>
+
+    <!-- Region Column -->
+    <ng-container matColumnDef="region">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> The region </th>
+      <td mat-cell *matCellDef="let row"> {{row.region}} </td>
+    </ng-container>
+
+    <!-- CoatOfArms Column -->
+    <ng-container matColumnDef="coatOfArms">
+      <th mat-header-cell *matHeaderCellDef mat-sort-header> The cost of arms description </th>
+      <td mat-cell *matCellDef="let row"> {{row.coatOfArms}} </td>
+    </ng-container>
+
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+
+    <tr class="mat-row" *matNoDataRow>
+      <td class="mat-cell" colspan="4">No data matching the filter "{{input.value}}"</td>
+    </tr>
+  </table>
+  
+  <mat-paginator [pageSize]="5" [pageSizeOptions]="[5, 10, 25, 100]"></mat-paginator>
+</div>
