--- a/src/app/houses/houses.component.html
+++ b/src/app/houses/houses.component.html
@@ -1,3 +1,4 @@
+<h1>Ice and Fire Houses</h1>
 <mat-form-field>
   <mat-label>Filter</mat-label>
   <input matInput (keyup)="applyFilter($event)" placeholder="Ex. Algood or Westerlands" #input>
@@ -13,8 +14,8 @@
     </ng-container>
 
     <!-- Region Column -->
-    <ng-container matColumnDef="region">
-      <th mat-header-cell *matHeaderCellDef mat-sort-header> The region </th>
+    <ng-container matColumnDef="region" >
+      <th mat-header-cell *matHeaderCellDef mat-sort-header > The region </th>
       <td mat-cell *matCellDef="let row"> {{row.region}} </td>
     </ng-container>
 
